- NEW: Make the Ivy console filter on the logging level (IVYDE-205)
- NEW: Support for Eclipse variables (IVYDE-152)

- IMPROVE: Wrap cache cleaning in a job so that it does not block the workspace (IVYDE-207) (thanks to Jon Schneider)
- IMPROVE: Allow workspace resolver to skip version matcher (IVYDE-187) (thanks to Phillip Webb)

- FIX: "Ivy Settings Path" Browse button results in an incorrectly formatted URL (IVYDE-191) (thanks to Jon Schneider)
- FIX: Workspace Resolver Prevents Source Download (IVYDE-188) (thanks to Phillip Webb)
- FIX: Resolve in Workspace fails to find projects under certain conditions (IVYDE-186) (thanks to Adam Karl)
- FIX: The gui wizard crash when adding a IvyDE Managed Dependencies library to a .launch file's classpath (IVYDE-200)
- FIX: Ivy Library removed from the list of Java EE Module Dependencies after changing its properties (IVYDE-178)
- FIX: Ivy Classpath Contributed to Dependent Projects When not Exported (IVYDE-193)
- FIX: Incorrect project:// path in the ivysettings configuration make the UI crash (IVYDE-203)
- FIX: conf attributes must not be null (IVYDE-209) (thanks to Ivica Loncar)
- FIX: Errors are not reported when multiple resolve are launched (IVYDE-219)
- FIX: Ivy settings file cannot be loaded via http url (IVYDE-218)
- FIX: dependency order not preserved causing failed builds (IVYDE-170)
- FIX: Can not add a project specific property file when adding a library (IVYDE-228)
- FIX: IvyDE fail on project close to trigger resolve on dependent project (IVYDE-229)

  version 2.0.0 final
==========================
- NEW: Add the IvyDE documentation to the Eclipse help (IVYDE-150)
- NEW: Export IVY_HOME as a classpath variable (IVYDE-141)
- NEW: Support variables in ivyconf.xml (IVYDE-13) (thanks to Will Gorman)
- NEW: Allow to manually reload the settings (IVYDE-26)
- NEW: Allow to not trigger full resolve at startup (IVYDE-74)
- IMPROVE: Split the global configuration panel into sevral ones (IVYDE-151)